--- a/My2020SMS/app/src/main/res/values/colors.xml
+++ b/My2020SMS/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorBgMy2020SMS">#434453</color>
 </resources>
