--- a/My2020SMS/app/src/main/res/drawable/ic_inbox.xml
+++ b/My2020SMS/app/src/main/res/drawable/ic_inbox.xml
@@ -3,15 +3,13 @@
 
     <!-- Main button -->
     <item android:state_pressed="false" android:top="16dp" android:left="16dp" android:right="16dp" android:bottom="16dp">
-        <shape android:shape="oval">
-            <solid android:color="#E82727" />
-            <stroke android:width="10dp" android:color="#F6D4D4"/>
+        <shape android:shape="rectangle">
+            <solid android:color="#001C4ECF" />
         </shape>
     </item>
     <item android:state_pressed="true">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-            <solid android:color="#F38484" />
-            <stroke android:width="10dp" android:color="#ffff"/>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+            <solid android:color="#95FFFFFF" />
         </shape>
     </item>
 
