--- a/My2020SMS/app/src/main/res/layout/activity_inbox.xml
+++ b/My2020SMS/app/src/main/res/layout/activity_inbox.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Inbox"
-    android:background="@color/colorBgMy2020SMS">
+    android:background="@color/colorBgMy2020SMS"
+    android:id="@+id/InboxView">
 
-    <TextView
-        android:id="@+id/viewInbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/inbox_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </ListView>
 
-</ScrollView>
+    </LinearLayout>
+
+</FrameLayout>
