--- a/My2020SMS/app/src/main/res/layout/draft_row.xml
+++ b/My2020SMS/app/src/main/res/layout/draft_row.xml
@@ -6,34 +6,59 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_margin="10dp"
-        android:padding="5dp" />
 
-    <LinearLayout android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="#95454475">
 
         <TextView
             android:id="@+id/recipientNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Medium Text"
-            android:textStyle="bold"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:padding="2dp"
-            android:textColor="#FFFF" />
+            android:text="Medium Text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#FFFF"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/textBody"
             android:layout_width="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/recipientNumber"
             android:text="TextView"
             android:textColor="#D4CEF4"
             android:layout_marginLeft="10dp"/>
-    </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/sendStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="19dp"
+            android:text="sended : 22-08-2020 08:55:32"
+            android:textSize="12dp"
+            android:textColor="#F44848" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/selectedIcon"
+            android:layout_below="@+id/sendStatus"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp" />
+    </RelativeLayout>
 </LinearLayout>
