bug fix DraftManagement.java & MainActivity.java
RecipientName hilang bila nomer penerima diedit
bug fix Send SMS permission in MainActivity

--- a/My2020SMS/app/src/main/res/layout/activity_draft_management.xml
+++ b/My2020SMS/app/src/main/res/layout/activity_draft_management.xml
@@ -130,7 +130,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="34dp"
         android:gravity="center"
-        android:text="Universitas Al Azahar Indonesia @2020"
+        android:text="Universitas Al Azhar Indonesia @2020"
         android:textColor="#fff"
         android:textSize="15dp" />
 
