--- a/My2020SMS/app/src/main/res/layout/contact_row.xml
+++ b/My2020SMS/app/src/main/res/layout/contact_row.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- MY2020SMS : R. Satrio Hariomurti Wicaksono (0102517023) ; Dyah Retno Palupi (0102517006) -->
 <!--  Single List Item Design -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
