--- a/My2020SMS/app/src/main/res/layout/floatingactionbutton_newdraft.xml
+++ b/My2020SMS/app/src/main/res/layout/floatingactionbutton_newdraft.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- MY2020SMS : R. Satrio Hariomurti Wicaksono (0102517023) ; Dyah Retno Palupi (0102517006) -->
 
 <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/fab"
     android:layout_width="wrap_content"
